--- a/resources/MainMenu.xib
+++ b/resources/MainMenu.xib
@@ -36,7 +36,7 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSCustomObject" id="933594872">
-				<string key="NSClassName">GyaimController</string>
+				<string key="NSClassName">CandWindowController</string>
 			</object>
 			<object class="NSWindowTemplate" id="300581601">
 				<int key="NSWindowStyleMask">15</int>
@@ -84,6 +84,7 @@
 											<string key="NSFrameSize">{198, 77}</string>
 											<reference key="NSSuperview" ref="225386885"/>
 											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView"/>
 											<object class="NSTextContainer" key="NSTextContainer" id="847492557">
 												<object class="NSLayoutManager" key="NSLayoutManager">
 													<object class="NSTextStorage" key="NSTextStorage">
@@ -190,6 +191,7 @@
 									<string key="NSFrame">{{-100, -100}, {15, 77}}</string>
 									<reference key="NSSuperview" ref="611643256"/>
 									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="469986557"/>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<string key="NSControlAction">_doScroller:</string>
 									<reference key="NSControlTarget" ref="611643256"/>
@@ -203,6 +205,7 @@
 									<string key="NSFrame">{{-100, -100}, {87, 18}}</string>
 									<reference key="NSSuperview" ref="611643256"/>
 									<reference key="NSWindow"/>
+									<reference key="NSNextKeyView" ref="225386885"/>
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									<string key="NSControlAction">_doScroller:</string>
 									<reference key="NSControlTarget" ref="611643256"/>
@@ -213,10 +216,10 @@
 									<double key="NSPercent">0.94565218687057495</double>
 								</object>
 							</array>
-							<string key="NSFrame">{{20, 20}, {200, 79}}</string>
+							<string key="NSFrame">{{20, 24}, {200, 79}}</string>
 							<reference key="NSSuperview" ref="158908139"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView" ref="225386885"/>
+							<reference key="NSNextKeyView" ref="705240079"/>
 							<int key="NSsFlags">133122</int>
 							<reference key="NSVScroller" ref="705240079"/>
 							<reference key="NSHScroller" ref="469986557"/>
@@ -229,6 +232,7 @@
 					<string key="NSFrameSize">{241, 126}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
+					<reference key="NSNextKeyView" ref="611643256"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1280, 777}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
@@ -250,11 +254,11 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="1021"/>
-						<reference key="destination" ref="933594872"/>
+						<string key="label">candwin</string>
+						<reference key="source" ref="933594872"/>
+						<reference key="destination" ref="300581601"/>
 					</object>
-					<int key="connectionID">376</int>
+					<int key="connectionID">390</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -271,46 +275,6 @@
 						<reference key="destination" ref="95293706"/>
 					</object>
 					<int key="connectionID">398</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candwin</string>
-						<reference key="source" ref="933594872"/>
-						<reference key="destination" ref="300581601"/>
-					</object>
-					<int key="connectionID">399</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candwin</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="300581601"/>
-					</object>
-					<int key="connectionID">394</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candview</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="158908139"/>
-					</object>
-					<int key="connectionID">395</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">textview</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="95293706"/>
-					</object>
-					<int key="connectionID">396</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">inputcontroller</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="933594872"/>
-					</object>
-					<int key="connectionID">397</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -397,10 +361,12 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="375.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="384.IBPersistedLastKnownCanvasPosition">{83.5, 195}</string>
 				<string key="384.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="384.IBWindowTemplateEditedContentRect">{{628, 719}, {241, 126}}</string>
 				<boolean value="YES" key="384.NSWindowTemplate.visibleAtLaunch"/>
 				<string key="385.CustomClassName">CandView</string>
+				<reference key="385.IBNSViewMetadataGestureRecognizers" ref="0"/>
 				<string key="385.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="386.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="387.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -412,7 +378,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">399</int>
+			<int key="maxID">398</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -430,7 +396,7 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="139939147">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="673155704">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Stubs.h</string>
 					</object>
@@ -449,7 +415,7 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<reference key="sourceIdentifier" ref="139939147"/>
+					<reference key="sourceIdentifier" ref="673155704"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">CandWindow</string>
@@ -468,30 +434,11 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
-					<reference key="sourceIdentifier" ref="139939147"/>
+					<reference key="sourceIdentifier" ref="673155704"/>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">GyaimController</string>
-					<string key="superclassName">IMKInputController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="activateServer:">id</string>
-						<string key="deactivateServer:">id</string>
-						<string key="wordpart:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="activateServer:">
-							<string key="name">activateServer:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="deactivateServer:">
-							<string key="name">deactivateServer:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="wordpart:">
-							<string key="name">wordpart:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
+					<string key="className">CandWindowController</string>
+					<string key="superclassName">NSWindowController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="candview">CandView</string>
 						<string key="candwin">CandWindow</string>
@@ -511,7 +458,7 @@
 							<string key="candidateClassName">NSTextView</string>
 						</object>
 					</dictionary>
-					<reference key="sourceIdentifier" ref="139939147"/>
+					<reference key="sourceIdentifier" ref="673155704"/>
 				</object>
 			</array>
 		</object>
