--- a/resources/MainMenu.xib
+++ b/resources/MainMenu.xib
@@ -36,7 +36,7 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSCustomObject" id="933594872">
-				<string key="NSClassName">CandWindowController</string>
+				<string key="NSClassName">GyaimController</string>
 			</object>
 			<object class="NSWindowTemplate" id="300581601">
 				<int key="NSWindowStyleMask">15</int>
@@ -216,7 +216,7 @@
 									<double key="NSPercent">0.94565218687057495</double>
 								</object>
 							</array>
-							<string key="NSFrame">{{20, 24}, {200, 79}}</string>
+							<string key="NSFrame">{{20, 20}, {200, 79}}</string>
 							<reference key="NSSuperview" ref="158908139"/>
 							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="705240079"/>
@@ -246,27 +246,11 @@
 			<array key="connectionRecords">
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">delegate</string>
-						<reference key="source" ref="1050"/>
-						<reference key="destination" ref="114338756"/>
-					</object>
-					<int key="connectionID">393</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">candwin</string>
 						<reference key="source" ref="933594872"/>
 						<reference key="destination" ref="300581601"/>
 					</object>
-					<int key="connectionID">390</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candview</string>
-						<reference key="source" ref="933594872"/>
-						<reference key="destination" ref="158908139"/>
-					</object>
-					<int key="connectionID">391</int>
+					<int key="connectionID">417</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -274,7 +258,39 @@
 						<reference key="source" ref="933594872"/>
 						<reference key="destination" ref="95293706"/>
 					</object>
-					<int key="connectionID">398</int>
+					<int key="connectionID">418</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">candview</string>
+						<reference key="source" ref="933594872"/>
+						<reference key="destination" ref="158908139"/>
+					</object>
+					<int key="connectionID">419</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">candwin</string>
+						<reference key="source" ref="114338756"/>
+						<reference key="destination" ref="300581601"/>
+					</object>
+					<int key="connectionID">394</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">candview</string>
+						<reference key="source" ref="114338756"/>
+						<reference key="destination" ref="158908139"/>
+					</object>
+					<int key="connectionID">395</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">textview</string>
+						<reference key="source" ref="114338756"/>
+						<reference key="destination" ref="95293706"/>
+					</object>
+					<int key="connectionID">414</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -361,7 +377,7 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="-3.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="375.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="384.IBPersistedLastKnownCanvasPosition">{83.5, 195}</string>
+				<string key="384.IBPersistedLastKnownCanvasPosition">{268.5, 225}</string>
 				<string key="384.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="384.IBWindowTemplateEditedContentRect">{{628, 719}, {241, 126}}</string>
 				<boolean value="YES" key="384.NSWindowTemplate.visibleAtLaunch"/>
@@ -371,6 +387,7 @@
 				<string key="386.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="387.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="388.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="389.CustomClassName">CandTextView</string>
 				<string key="389.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="392.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
@@ -378,7 +395,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">398</int>
+			<int key="maxID">419</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -396,10 +413,48 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="673155704">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="candview">CandView</string>
+						<string key="candwin">CandWindow</string>
+						<string key="textview">CandTextView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="candview">
+							<string key="name">candview</string>
+							<string key="candidateClassName">CandView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="candwin">
+							<string key="name">candwin</string>
+							<string key="candidateClassName">CandWindow</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="textview">
+							<string key="name">textview</string>
+							<string key="candidateClassName">CandTextView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="109765385">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Stubs.h</string>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">CandTextView</string>
+					<string key="superclassName">NSTextView</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="initWithFrame:">id</string>
+						<string key="mouseDown:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="initWithFrame:">
+							<string key="name">initWithFrame:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="mouseDown:">
+							<string key="name">mouseDown:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<reference key="sourceIdentifier" ref="109765385"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">CandView</string>
@@ -415,7 +470,7 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<reference key="sourceIdentifier" ref="673155704"/>
+					<reference key="sourceIdentifier" ref="109765385"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">CandWindow</string>
@@ -434,15 +489,34 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
-					<reference key="sourceIdentifier" ref="673155704"/>
+					<reference key="sourceIdentifier" ref="109765385"/>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">CandWindowController</string>
-					<string key="superclassName">NSWindowController</string>
+					<string key="className">GyaimController</string>
+					<string key="superclassName">IMKInputController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="activateServer:">id</string>
+						<string key="deactivateServer:">id</string>
+						<string key="wordpart:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="activateServer:">
+							<string key="name">activateServer:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="deactivateServer:">
+							<string key="name">deactivateServer:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="wordpart:">
+							<string key="name">wordpart:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="candview">CandView</string>
 						<string key="candwin">CandWindow</string>
-						<string key="textview">NSTextView</string>
+						<string key="textview">CandTextView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="candview">
@@ -455,10 +529,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="textview">
 							<string key="name">textview</string>
-							<string key="candidateClassName">NSTextView</string>
+							<string key="candidateClassName">CandTextView</string>
 						</object>
 					</dictionary>
-					<reference key="sourceIdentifier" ref="673155704"/>
+					<reference key="sourceIdentifier" ref="109765385"/>
 				</object>
 			</array>
 		</object>
