--- a/resources/MainMenu.xib
+++ b/resources/MainMenu.xib
@@ -243,61 +243,12 @@
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array key="connectionRecords">
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candwin</string>
-						<reference key="source" ref="933594872"/>
-						<reference key="destination" ref="300581601"/>
-					</object>
-					<int key="connectionID">417</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">textview</string>
-						<reference key="source" ref="933594872"/>
-						<reference key="destination" ref="95293706"/>
-					</object>
-					<int key="connectionID">418</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candview</string>
-						<reference key="source" ref="933594872"/>
-						<reference key="destination" ref="158908139"/>
-					</object>
-					<int key="connectionID">419</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candwin</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="300581601"/>
-					</object>
-					<int key="connectionID">394</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">candview</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="158908139"/>
-					</object>
-					<int key="connectionID">395</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">textview</string>
-						<reference key="source" ref="114338756"/>
-						<reference key="destination" ref="95293706"/>
-					</object>
-					<int key="connectionID">414</int>
-				</object>
-			</array>
+			<array key="connectionRecords" id="0"/>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<array key="object" id="0"/>
+						<reference key="object" ref="0"/>
 						<reference key="children" ref="1048"/>
 						<nil key="parent"/>
 					</object>
@@ -413,25 +364,6 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</object>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="candview">CandView</string>
-						<string key="candwin">CandWindow</string>
-						<string key="textview">CandTextView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="candview">
-							<string key="name">candview</string>
-							<string key="candidateClassName">CandView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="candwin">
-							<string key="name">candwin</string>
-							<string key="candidateClassName">CandWindow</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="textview">
-							<string key="name">textview</string>
-							<string key="candidateClassName">CandTextView</string>
-						</object>
-					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="109765385">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Stubs.h</string>
@@ -440,20 +372,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">CandTextView</string>
 					<string key="superclassName">NSTextView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="initWithFrame:">id</string>
-						<string key="mouseDown:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="initWithFrame:">
-							<string key="name">initWithFrame:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="mouseDown:">
-							<string key="name">mouseDown:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
 					<reference key="sourceIdentifier" ref="109765385"/>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -511,25 +429,6 @@
 						<object class="IBActionInfo" key="wordpart:">
 							<string key="name">wordpart:</string>
 							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="candview">CandView</string>
-						<string key="candwin">CandWindow</string>
-						<string key="textview">CandTextView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="candview">
-							<string key="name">candview</string>
-							<string key="candidateClassName">CandView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="candwin">
-							<string key="name">candwin</string>
-							<string key="candidateClassName">CandWindow</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="textview">
-							<string key="name">textview</string>
-							<string key="candidateClassName">CandTextView</string>
 						</object>
 					</dictionary>
 					<reference key="sourceIdentifier" ref="109765385"/>
